alignment fix

--- a/app/styles/general.less
+++ b/app/styles/general.less
@@ -81,7 +81,7 @@ a.arrow-down {
 	width: 100vw;
 	// height: ~"calc(100vh - 45px)";
 	height: 100vh;
-	padding-left: 50px;
+	padding-left: 55px;
 
 	// Firefox fix:
 	// @-moz-document url-prefix() { 
@@ -89,7 +89,9 @@ a.arrow-down {
 	// 	box-sizing: unset;
 	// 	padding-bottom: 40px;
 	// }
-
+	.h2-bloc {
+		margin-right: 65px;
+	}
 	h2 {
 		font-family: @DLight;
 		color: @greyD;
@@ -101,7 +103,7 @@ a.arrow-down {
 			margin-top: 50px;
 		}
 		&:nth-child(2) {
-			padding-left: 3em;
+			padding-left: 3.65em;
 		}
 	}
 	h3 {
