--- a/app/styles/header.less
+++ b/app/styles/header.less
@@ -18,12 +18,13 @@ header {
 		background: url(../images/sprite-logo.png) no-repeat center left;
 		background-size: 100%;
 		background-position: 0 0;
+		margin-left: 55px;
 	}
 	nav {
 		width: auto;
 		height: @headerHeight;
 		left: 50%;
-	    margin-left: -330px;
+	    margin-left: -337px;
 	    position: absolute;
 	    width: auto;
 	}
